make quote card uis

--- a/index.html
+++ b/index.html
@@ -80,6 +80,24 @@
     </div>
   </section>
 
+  <section class="test" style="display: flex; flex-direction: column; align-items: center;">
+    <div class="testone" style="display: flex; flex-direction: row; align-items:  center;"><div id="tone">This bootcamp has been an absolutely incredible experience. The instructors, the course materials, and the support system provided have all exceeded my expectations. In just 9 days, I've gained more knowledge than I would in an entire month of dedicated effort. Every instructor displayed a profound mastery of their subject matter, effectively conveying their expertise and ensuring clarity in their teachings. Overall, I can confidently say that this program has been nothing short of amazing. Whether you're a beginner or an experienced learner, I wholeheartedly recommend participating in this program not only for the preparation but also for the knowledge that you will gain!
+      <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Yash Rajput, <span style="color: #5FA4FF;">USESO Bootcamp student</span></p></div>
+    <div id="ttwo">Pandorax USABO Bootcamp was beneficial to my studies in biology. The instructors made the classes engaging and informative and made hard concepts easy to understand. The instructors were also very supportive, and willing to give us help whenever we needed it. They would also upload recordings, which was tremendously useful for reviewing. It had been a dream to make USABO semifinals my first year of high school since middle school, and it probably would not have happened without their class!
+      <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Henry Yu, <span style="color: #FFD0F7">USABO Bootcamp student</span></p></div></div>
+    <div class="testtwo" style="display: flex; flex-direction: row; align-items:  center;"><div id="tthree">The NACLO Bootcamp opened my eyes to several problem solving techniques in linguistics previously unaware to me. The well-explained problem walk-throughs motivated me to try problems that intimidated me and eventually solve them. I am deeply grateful for the problem sets they provided as it helped me reinforce and understand the material learnt in the classes better. I'm thankful to this endeavor and all the staff members there!
+      <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Meenakshi Hariharan, <span style="color: #a136e3">NACLO Bootcamp student</span></p></div>
+    <div id="tfour">The USAPhO bootcamp was really helpful for learning physics! I learned of so many new resources, as well as concepts from each of the instructors. I also made new friends with some of the other students in the bootcamp. Logan Reich was especially a very fun instructor, and made lessons very enjoyable. 
+      <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Lishan Prado, <span style="color: #f6b26b">USAPhO Bootcamp student</span></p></div></div>
+    <div class="testthree" style="display: flex; flex-direction: row; align-items:  center;"><div id="tfive">All the reputable Olympiad learning programs I know are super expensive, not very high quality, and don't teach niche subjects. Pandorax bootcamps completely shifted this perspective. Award-winning all-star instructor team, quality weekly homework and problem set handouts, following a huge Discord of the brightest STEM students worldwide that gives me help whenever I need it, it is no wonder why Pandorax has grown so popular among the Olympiad community and why it's always my #1 choice. 
+      <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Alex Li, <span style="color: #b8f890">USNCO Bootcamp student</span></p></div>
+    <div id="tsix">The instructors took the time and effort to thoroughly explain the content and strategies for each topic. Without the concrete and specific help for the practice the wonderful instructors provided and the niche tips they shared through our problem solving sessions, I wouldn't even have been close to becoming alternate for Team USA. My gratitude and thanks goes to them, and I wish the best as their team continues to share their knowledge for future students! 
+      <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Rehan Babu, <span style="color: #a136e3">NACLO Bootcamp student</span></p></div></div>
+  </section>
+
+
+  
+
   <section id="thingy" style="display: flex; flex-direction: column; align-items: center;">
     <p id="bsm" >We will guide you, step by step, from a dreamer to a doer.</p>
     <h5 id="bsbg">Open Pandora's box now.</h3>
