--- a/projects.html
+++ b/projects.html
@@ -6,6 +6,8 @@
     <title>Pandorax</title>
     <link rel="stylesheet" href="assets/products.css">
     <link rel="icon" href="assets/webstuff/pandoraxO">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
     <style>
       @import url('https://fonts.cdnfonts.com/css/poppins');
     </style>
