--- a/index.html
+++ b/index.html
@@ -420,6 +420,109 @@
       }
     );
 
+    gsap.fromTo("#tone", 
+      {
+        opacity: 0,
+        x: -400
+      }, 
+      {
+        opacity: 1,
+        x: 0, 
+        duration: 0.5,
+        ease: "power1.inOut",
+        scrollTrigger: {
+          trigger: "#tone",
+          start: "top 60%",
+          end: "top 50%", 
+        }
+      }
+    );
+    gsap.fromTo("#ttwo", 
+      {
+        opacity: 0,
+        x: -400
+      }, 
+      {
+        opacity: 1,
+        x: 0, 
+        duration: 0.5,
+        ease: "power1.inOut",
+        scrollTrigger: {
+          trigger: "#ttwo",
+          start: "top 80%",
+          end: "top 50%", 
+        }
+      }
+    );
+    gsap.fromTo("#tthree", 
+      {
+        opacity: 0,
+        x: -400
+      }, 
+      {
+        opacity: 1,
+        x: 0, 
+        duration: 0.5,
+        ease: "power1.inOut",
+        scrollTrigger: {
+          trigger: "#tthree",
+          start: "top 60%",
+          end: "top 50%", 
+        }
+      }
+    );
+    gsap.fromTo("#tfour", 
+      {
+        opacity: 0,
+        x: -400
+      }, 
+      {
+        opacity: 1,
+        x: 0, 
+        duration: 0.5,
+        ease: "power1.inOut",
+        scrollTrigger: {
+          trigger: "#tfour",
+          start: "top 80%",
+          end: "top 50%", 
+        }
+      }
+    );
+    gsap.fromTo("#tfive", 
+      {
+        opacity: 0,
+        x: -400
+      }, 
+      {
+        opacity: 1,
+        x: 0, 
+        duration: 0.5,
+        ease: "power1.inOut",
+        scrollTrigger: {
+          trigger: "#tfive",
+          start: "top 60%",
+          end: "top 50%", 
+        }
+      }
+    );
+    gsap.fromTo("#tsix", 
+      {
+        opacity: 0,
+        x: -400
+      }, 
+      {
+        opacity: 1,
+        x: 0, 
+        duration: 0.5,
+        ease: "power1.inOut",
+        scrollTrigger: {
+          trigger: "#tsix",
+          start: "top 80%",
+          end: "top 50%", 
+        }
+      }
+    );
+
     });
   </script>  
 </div>
