--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
   <style>
     @import url('https://fonts.cdnfonts.com/css/poppins');
   </style>
-  <!-- <link rel="preload" href="assets/webstuff/calculus_primer.png" as="image">
+  <link rel="preload" href="assets/webstuff/calculus_primer.png" as="image">
   <link rel="preload" href="assets/webstuff/usabo_guide.png" as="image">
   <link rel="preload" href="assets/webstuff/usaaao_guide.png" as="image">
-  <link rel="preload" href="assets/webstuff/useso_guide.png" as="image"> -->
+  <link rel="preload" href="assets/webstuff/useso_guide.png" as="image">
 
 </head>
 <body>
