--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
   </section>
 
   <section class="test" style="display: flex; flex-direction: column; align-items: center;">
+    <h4 id="fif">Trusted by students around the world.</h6>
+    <p id="bsm">Here is what our students say about our Olympiad bootcamps.</p>
     <div class="testone" style="display: flex; flex-direction: row; align-items:  center;"><div id="tone">This bootcamp has been an absolutely incredible experience. The instructors, the course materials, and the support system provided have all exceeded my expectations. In just 9 days, I've gained more knowledge than I would in an entire month of dedicated effort. Every instructor displayed a profound mastery of their subject matter, effectively conveying their expertise and ensuring clarity in their teachings. Overall, I can confidently say that this program has been nothing short of amazing. Whether you're a beginner or an experienced learner, I wholeheartedly recommend participating in this program not only for the preparation but also for the knowledge that you will gain!
       <p style="color: #fff; padding-top: 30px; text-align: right; font-weight: bold;">Yash Rajput, <span style="color: #5FA4FF;">USESO Bootcamp student</span></p></div>
     <div id="ttwo">Pandorax USABO Bootcamp was beneficial to my studies in biology. The instructors made the classes engaging and informative and made hard concepts easy to understand. The instructors were also very supportive, and willing to give us help whenever we needed it. They would also upload recordings, which was tremendously useful for reviewing. It had been a dream to make USABO semifinals my first year of high school since middle school, and it probably would not have happened without their class!
