mass profile update for oly camps

--- a/naclobootpage.html
+++ b/naclobootpage.html
@@ -39,12 +39,13 @@
 
     <div class="executive"> 
         <div class="profile-card" style="height: 485px">
-          <img src="assets/webstuff/pplimg/faraz.png" alt="David Zhou"/>
+          <img src="assets/webstuff/pplimg/deeraj.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Faraz Siddiqui</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Deeraj Pothapragada</h2>
             <ul>
-              <li>IOL silver medalist</li>
-              <li>India IOAA training camp</li>
+              <li>MIT</li>
+              <li>IOL Silver Medalist</li>
+              <li>NACLO Rank 2nd</li>
             </ul>
           </div>
         </div>
@@ -54,6 +55,7 @@
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Matei Chirila</h2>
             <ul>
+              <li>University of Cambridge</li>
               <li>IOL silver medalist</li>
             
             </ul>
@@ -63,12 +65,33 @@
         <div class="break"></div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/deeraj.png"/>
+          <img src="assets/webstuff/pplimg/faraz.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Deeraj Pothapragada</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Faraz Siddiqui</h2>
             <ul>
-              <li>2022 USA alternate</li>
-              <li>2023 NACLO rank 2 and IOL silver medalist</li>
+              <li>IOL Silver Medalist</li>
+              <li>India IOAA training camp</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/pfp.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Panawat Tiacharoen</h2>
+            <ul>
+              <li>IOL Silver Medalist</li>
+              <li>APLO Top Gold</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-card">
+          <img src="assets/webstuff/pplimg/rehan.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Rehan Babu</h2>
+            <ul>
+              <li>IOL USA Alternate</li>
             </ul>
           </div>
         </div>
@@ -76,11 +99,11 @@
     </div>
 
     <section class="container">
-      <a href="https://docs.google.com/forms/d/e/1FAIpQLScMTvQDJxxSTWi5-JGcmch50uuap7jCQX2KuOfYSIZvDfcj8w/viewform"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/Rf51jsXB263N76jG9"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
-      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+      <p><span>&#169;</span> 2024 by Pandorax. All Rights Reserved.</p>
     </section>
 
 <script src="assets/script.js"></script>
