--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -39,24 +39,24 @@
 
     <div class="executive"> 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/fu xin chen.png" alt="David Zhou"/>
+          <img src="assets/webstuff/pplimg/aryanbora.png" alt="David Zhou"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Fu Xing Chen</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
             <ul>
-              <li>MIT '27</li>
-              <li>USABO national finalist</li>
+              <li>MIT</li>
+              <li>2x USABO National Finalist</li>
+              <li>2x USABO Bronze Medalist (top 12)</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card" style="height: 485px">
-          <img src="assets/webstuff/pplimg/carolina k.png"/>
+          <img src="assets/webstuff/pplimg/graysen.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600;">Carolina K.</h2>
+            <h2 style="font-size: 130%; font-weight: 600;">Graysen Lee</h2>
             <ul>
-              <li>USABO bronze (top 12)</li>
-              <li>2x USABO national finalist</li>
-              <li>Scioly national medalist</li>
+              <li>USABO Silver Medalist (Top 8)</li>
+              <li>USABO National Finalist</li>
             </ul>
           </div>
         </div>
@@ -64,13 +64,12 @@
         <div class="break"></div>
 
         <div class="profile-card" style="height: 485px;">
-          <img src="assets/webstuff/pplimg/aryanbora.png"/>
+          <img src="assets/webstuff/pplimg/evanx.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Evan Xiang</h2>
             <ul>
               <li>USABO National Finalist</li>
-              <li>USNCO Honors</li>
-              <li>USACO Platinum division</li>
+              <li>USESO National Finalist</li>
             </ul>
           </div>
         </div>
@@ -80,8 +79,7 @@
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Arjun Krish</h2>
             <ul>
-              <li>USABO top 50</li>
-              <li>2x USABO semifinalist</li>
+              <li>2x USABO Top 50</li>
             </ul>
           </div>
         </div>
@@ -89,11 +87,11 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/Rf51jsXB263N76jG9"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
-      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+      <p><span>&#169;</span> 2024 by Pandorax. All Rights Reserved.</p>
     </section>
 
 <script src="assets/script.js"></script>
