--- a/usaphobootpage.html
+++ b/usaphobootpage.html
@@ -43,19 +43,22 @@
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Ong Zhi Zhang</h2>
             <ul>
+              <li>MIT</li>
               <li>IPhO silver medalist</li>
               <li>IOAA gold medalist</li>
-              <li>MIT '28</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/henry ding.png"/>
+          <img src="assets/webstuff/pplimg/aryanbora.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Henry Ding</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
             <ul>
-              <li>2x USAPhO gold medalist</li>
+              <li>MIT</li>
+              <li>USAPhO Gold Medalist</li>
+              <li>USAMO Qualifier</li>
+              <li>USACO Platinum</li>
             </ul>
           </div>
         </div>
@@ -63,12 +66,12 @@
         <div class="break"></div>
 
         <div class="profile-card">
-          <img src="assets/webstuff/pplimg/logan reich.png"/>
+          <img src="assets/webstuff/pplimg/leoyu.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Logan Reich</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Leo Yu</h2>
             <ul>
-              <li>IPhO silver medalist</li>
-              <li>IOAA gold medalist</li>
+              <li>USAPhO Bronze Medalist</li>
+              <li>USAJMO Winner (Top 12)</li>
             </ul>
           </div>
         </div>
@@ -76,11 +79,11 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/Rf51jsXB263N76jG9"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
-      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+      <p><span>&#169;</span> 2024 by Pandorax. All Rights Reserved.</p>
     </section>
 
 <script src="assets/script.js"></script>
