--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -43,21 +43,20 @@
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Phoenix Wu</h2>
             <ul>
-              <li>MIT '27</li>
-              <li>2x IChO medalist, 1x gold</li>
-              <li>4x USNCO national finalist</li>
+              <li>MIT</li>
+              <li>2x IChO Medalist, 1x Gold</li>
+              <li>4x USNCO National Finalist</li>
             </ul>
           </div>
         </div>
 
         <div class="profile-card" style="height: 485px">
-          <img src="assets/webstuff/pplimg/anant asthana.png"/>
+          <img src="assets/webstuff/pplimg/jimmy.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Anant Asthana</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Jimmy Jiang</h2>
             <ul>
-              <li>2x USNCO national finalist</li>
-              <li>National Scibowl top 5</li>
-              <li>AIME qualifier</li>
+              <li>2x USNCO National Finalist</li>
+              <li>National Science Olympiad Top 10</li>
             </ul>
           </div>
         </div>
@@ -65,14 +64,32 @@
         <div class="break"></div>
 
         <div class="profile-card" style="height: 505px">
-          <img src="assets/webstuff/pplimg/yufei chen.png"/>
+          <img src="assets/webstuff/pplimg/jianyu.png"/>
           <div class="profile-details">
-            <h2 style="font-size: 130%; font-weight: 600">Yufei Chen</h2>
+            <h2 style="font-size: 130%; font-weight: 600">Jianyu Wang</h2>
             <ul>
-              <li>MIT '28</li>
-              <li>IChO alternate</li>
-              <li>IBO top gold (ranked #1)</li>
-              <li>IESO gold medalist (ranked #5)</li>
+              <li>USNCO Top 50</li>
+              <li>USABO Semifinalist</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-card" style="height: 505px">
+          <img src="assets/webstuff/pplimg/ben.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Ben Bian</h2>
+            <ul>
+              <li>USNCO Top 150</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="profile-card" style="height: 505px">
+          <img src="assets/webstuff/pplimg/pfp.png"/>
+          <div class="profile-details">
+            <h2 style="font-size: 130%; font-weight: 600">Vishal Sundaram</h2>
+            <ul>
+              <li>USNCO Top 150</li>
             </ul>
           </div>
         </div>
@@ -80,11 +97,11 @@
     </div>
 
     <section class="container">
-      <a href="https://forms.gle/kDx1hvMovjz9M5Qy8"><button id="bruh">Sign Up</button></a>
+      <a href="https://forms.gle/Rf51jsXB263N76jG9"><button id="bruh">Sign Up</button></a>
     </section>
 
     <section class="copyright">
-      <p><span>&#169;</span> 2023 by Pandorax. All Rights Reserved.</p>
+      <p><span>&#169;</span> 2024 by Pandorax. All Rights Reserved.</p>
     </section>
 <script src="assets/script.js"></script>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
