--- a/usncobootpage.html
+++ b/usncobootpage.html
@@ -26,7 +26,7 @@
     <h1>USNCO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 9/16 - 12/9 every Sunday 5-6 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/13 - 8/21 every Saturday and Tuesday 8-9 PM EST (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp will prepare students for the USNCO open exam, assuming no prior experience with chemistry. This bootcamp will cover the chemistry of reactions, acids and bases, electronic structure, states of matter, thermodynamics, and more. By the end of the bootcamp, students should have enough knowledge to pass the USNCO open and win honors at the national level.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Basic understanding of algebra; no prior chemistry knowledge required.</p>
     </section>
