--- a/usabobootpage.html
+++ b/usabobootpage.html
@@ -26,7 +26,7 @@
     <h1>USABO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 9/16 - 12/9 every Sunday 8-9 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/13 - 8/21 every Saturday and Tuesday 6:30-7:30 PM EST (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp will prepare students for the USABO open round, assuming no prior experience with biology. This bootcamp will cover 7 important units found in the USABO: Biochemistry, Cell Biology, Genetics, Biosystematics, Plant Biology, Anatomy and Physiology, and Ecology. By the end of the bootcamp, students should have enough knowledge to qualify for the USABO semifinal round and win the prestigious honorable mention award.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: None.</p>
     </section>
