--- a/usaphobootpage.html
+++ b/usaphobootpage.html
@@ -26,7 +26,7 @@
     <h1>USAPhO Bootcamp</h1>
     
     <section class="description">
-        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 9/16 - 12/9 every Saturday 8-9 PM EST (classes will be recorded)</p>
+        <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Class Schedule</span>: 12 classes from 7/13 - 8/21 every Sunday and Wednesday 8:30-9:30 PM EST (classes will be recorded)</p>
         <p style="margin-bottom: 2vh;"><span style="text-decoration: underline; font-weight: bold">Description</span>: This bootcamp will prepare students for the F=ma exam, the entrance exam to the USAPhO, assuming no prior experience with physics. This bootcamp will cover all of physics mechanics, as well as general techniques to solve difficult and tricky problems. By the end of the bootcamp, students should have enough knowledge to pass the F=ma, qualifying for the prestigious USAPhO exam.</p>
         <p ><span style="text-decoration: underline; font-weight: bold">Prerequisites</span>: Basic understanding of algebra and elementary trigonometry; no prior physics knowledge necessary.</p>
     </section>
@@ -50,14 +50,14 @@
           </div>
         </div>
 
-        <div class="profile-card">
+        <div class="profile-card" style="height: 485px;">
           <img src="assets/webstuff/pplimg/aryanbora.png"/>
           <div class="profile-details">
             <h2 style="font-size: 130%; font-weight: 600">Aryan Bora</h2>
             <ul>
               <li>MIT</li>
               <li>USAPhO Gold Medalist</li>
-              <li>USAMO Qualifier</li>
+              <li>USAMO Winner (Top 12)</li>
               <li>USACO Platinum</li>
             </ul>
           </div>
