--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <!-- <span id="title">Pandorax</span> -->
        
     </h1>
-    <p id="btext">Turning dreams into reality.</p>
+    <p id="btext">Giving students a disproportionate advantage for winning prestigious Olympiads.</p>
     <div id="container">
       <a href="projects.html">
         <button class="btna" style="width: 175px; height: 70px; font-size: large; ">Get Started</button>
