updated college destination of team

--- a/team.html
+++ b/team.html
@@ -309,7 +309,7 @@
         <h4>Zelmay Jan</h4>
         <p style="margin-bottom: 10px; color: #ffd0f7">USABO Guide (head)</p>
         <ul style="font-size: 90%;">
-          <li>USABO top 50</li>
+          <li>2x USABO top 50</li>
           <li>USMDO gold medalist</li>
         </ul>
       </div>
@@ -332,7 +332,8 @@
         <h4>Katherine Yi</h4>
         <p style="margin-bottom: 10px; color: #cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
-          <li>IESO qualifier</li>
+          <li>IESO gold medalist</li>
+          <li>Scioly national champion</li>
         </ul>
       </div>
     </div>
@@ -355,6 +356,7 @@
         <h4>Harsh Ambardekar</h4>
         <p style="margin-bottom: 10px; color:#cb94ff;">USAAAO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Berkeley '28</li>
           <li>USAAAO bronze medalist</li>
           <li>SSP alum</li>
           <li>AIME qualfier</li>
@@ -368,6 +370,7 @@
         <h4>Ronit Kapur</h4>
         <p style="margin-bottom: 10px; color:#cb94ff">USAAAO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Duke '28</li>
           <li>ISEF finalist in Physics</li>
           <li>USAAAO semifinalist</li>
           <li>AIME qualifier</li>
@@ -381,6 +384,7 @@
         <h4>Alex Pan</h4>
         <p style="margin-bottom: 10px; color:#ffd0f7">USABO Guide</p>
         <ul style="font-size: 90%;">
+          <li>JHU '28</li>
           <li>USABO top 50</li>
         </ul>
       </div>
@@ -392,7 +396,7 @@
         <h4>Arjun Krish</h4>
         <p style="margin-bottom: 10px; color: #ffd0f7">USABO Guide</p>
         <ul style="font-size: 90%;">
-          <li>USABO top 50</li>
+          <li>2x USABO top 50</li>
           <li>2x USABO semifinalist</li>
         </ul>
       </div>
@@ -404,6 +408,7 @@
         <h4>Abheek Dhawan</h4>
         <p style="margin-bottom: 10px; color:#cb94ff">USAAAO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Yale '28</li>
           <li>USAAAO bronze medalist</li>
           <li>SSP alum</li>
         </ul>
@@ -428,6 +433,7 @@
         <h4>Andy Hou</h4>
         <p style="margin-bottom: 10px; color:#ffd0f7">USABO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Princeton '28</li>
           <li>USABO top 125</li>
           <li>NACLO semifinalist</li>
           <li>USNCO semifinalist</li>
@@ -453,7 +459,7 @@
         <h4>Vedang Singhal</h4>
         <p style="margin-bottom: 10px; color:#cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
-          <li>UNC '27 (premed)</li>
+          <li>UNC '27</li>
           <li>USESO national finalist</li>
           <li>USABO top 125</li> 
         </ul>
@@ -477,6 +483,7 @@
         <h4>Vivian Ye</h4>
         <p style="margin-bottom: 10px; color: #ffd0f7">USABO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Cornell '28</li>
           <li>USABO semifinalist</li>
           <li>USMDO bronze medalist</li>
         </ul>
@@ -500,7 +507,8 @@
         <h4>Surya Donath</h4>
         <p style="margin-bottom: 10px; color: #cfe2f3">USESO Guide</p>
         <ul style="font-size: 90%;">
-          <li>USESO national finalist</li>
+          <li>IESO qualifier</li>
+          <li>2x USESO national finalist</li>
         </ul>
       </div>
     </div>  
@@ -511,6 +519,7 @@
         <h4>Laurie Wang</h4>
         <p style="margin-bottom: 10px; color: #ffd0f7">USABO Guide</p>
         <ul style="font-size: 90%;">
+          <li>MIT '28</li>
           <li>USABO top 125</li>
           <li>AIME qualifier</li>
         </ul>
@@ -523,6 +532,7 @@
         <h4>Alexandra Duan</h4>
         <p style="margin-bottom: 10px; color: #ffd0f7">USABO Guide</p>
         <ul style="font-size: 90%;">
+          <li>Columbia '28</li>
           <li>USABO semifinalist</li>
           <li>Scioly national medalist</li>
           <li>AIME qualifier</li>
@@ -790,7 +800,7 @@
         <h4>Amit Saha</h4>
         <p style="margin-bottom: 10px; color: #3d9be9">ML Research Bootcamp</p>
         <ul style="font-size: 90%;">
-          <li>Gatech '27 (CS)</li>
+          <li>Gatech '27</li>
           <li>ISEF 4th place in Computational Bio</li>
           <li>Regeneron STS scholar</li>
         </ul>
