--- a/index.html
+++ b/index.html
@@ -10,42 +10,37 @@
   <style>
     @import url('https://fonts.cdnfonts.com/css/poppins');
   </style>
-  <link rel="preload" href="assets/webstuff/calculus_primer.png" as="image">
-  <link rel="preload" href="assets/webstuff/usabo_guide.png" as="image">
-  <link rel="preload" href="assets/webstuff/usaaao_guide.png" as="image">
-  <link rel="preload" href="assets/webstuff/useso_guide.png" as="image">
-
+  
 </head>
 <body>
-  <header hidden="hidden">
-    <nav>
-      <ul style="display: flex; justify-content: space-around;">
-        <!-- <li><img src="assets/webstuff/pandoraxOpng-removebg-preview.png" id="navim"></li> -->
-        <li><a href="#home">Home</a></li>
-        <li><a href="#ooop">oop</a></li>
-      </ul>
-    </nav>
+  <header>
+    <div class="head" style="padding-bottom: 2vh">
+      <div><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /> </div>
+      <a href="index.html"><button id="yoop">Home</button></a>
+      <!-- <a href="index.html"><img id="logo" src="assets/webstuff/pandorax_new_logo.png" /></a> -->
+      <a href="projects.html"><button id="prod">Projects</button></a>
+      <a href="programs.html"><button id="prog">Programs</button></a>
+      <a href="team.html"><button id="te">Our Team</button></a>
+      <a href="contact.html"><button id="cont">Contact</button></a>
+  </div>
   </header>
 
 <div class="containter2">
-  <section id="home" style="display: flex; flex-direction: column; align-items: center;">
-    <div id="home-background"></div>
-    <h1>
-      <img id="title" src="assets/webstuff/pandorax_new_logo.png" />
-      <!-- <span id="title">Pandorax</span> -->
-       
-    </h1>
-    <p id="btext">Giving students a disproportionate advantage for winning prestigious Olympiads.</p>
-    <div id="container">
-      <a href="projects.html">
-        <button class="btna" style="width: 175px; height: 70px; font-size: large; ">Get Started</button>
-      </a>
-    </div>
-  </section>
-<div id='frf' class="arrow animated bounce"></div>
+  <div style="display: flex; justify-content: center; align-items: center;" className="flex justify-center items-center  mt-40">
+    <h1 class="poppins-regular" style="font-size: 77px;">Turn Your</h1> 
+    <img src="assets/webstuff/nlogo.png" style="width: 291px; height: 173px" alt="Logo" />
+ </div>
+ <h2 style="text-align: center; font-size: 77px; margin-top: -60px;"class="poppins-regular text-center text-[77px] mt-[-60px]">Dream Into Reality</h2>
+
+ <p style="display: flex; justify-content: center; text-align: center; font-size: 19px; padding-inline: 350px; margin-top: 10px;" class="flex justify-center text-center text-[19px] px-[350px] mt-[10px] poppins-regular">Effortlessly dive in advanced fields of STEM. Pandorax provides a disproportionate advantage for winning prestigious Olympiads and science fairs.</p>
+
+ <div style="display: flex; justify-content: center; text-align: center; align-items: center; margin-top: 50px;" class="flex justify-center text-center items-center space-x-4 mt-[50px]">
+  <button id="grad" style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; color: white;">Get Started</button>
+  <button style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; background-color: transparent; color: white;">Learn More</button>
+ </div>
 
 
-  <section id="about" style="margin-top: 10vh; position:relative; display: flex; flex-direction: column; align-items: center;">
+  <section id="about" style="margin-top: 60vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
       <h2 id="dreambig" >Dream Big.</h2>
       <p  id="dbt" d>Ever wanted to qualify to compete in the International Biology Olympiad, which sets you up for a path of success as a future doctor? Or to win at the International Science and Engineering Fair which brings you one step closer to becoming a future scientist or innovator? You need resources and mentorship to help you reach your dreams. Regardless, cast your wide net far beyond the horizon — because we got you covered. </p>
@@ -412,7 +407,7 @@
       {
         opacity: 0.5,
         x: 0, 
-        duration: 2,
+        duration: 1,
         ease: "power1.inOut",
         scrollTrigger: {
           trigger: "#pplimg",
