--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
  <p style="display: flex; justify-content: center; text-align: center; font-size: 19px; padding-inline: 350px; margin-top: 10px;" class="flex justify-center text-center text-[19px] px-[350px] mt-[10px] poppins-regular">Effortlessly dive in advanced fields of STEM. Pandorax provides a disproportionate advantage for winning prestigious Olympiads and science fairs.</p>
 
  <div style="display: flex; justify-content: center; text-align: center; align-items: center; margin-top: 50px;" class="flex justify-center text-center items-center space-x-4 mt-[50px]">
-  <button id="grad" style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; color: white;">Get Started</button>
-  <button style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; background-color: transparent; color: white;">Learn More</button>
+  <a href="projects.html"><button id="grad" style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; color: white;">Get Started</button></a>
+  <a href="team.html"><button style="border-width: 1px; border-color: #ea16ea; padding-inline: 20px; padding-block: 8px; border-radius: 0.5rem; background-color: transparent; color: white;">Learn More</button></a>
  </div>
 
 
