--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </header>
 
 <div class="containter2">
-  <div style="display: flex; justify-content: center; align-items: center;" className="flex justify-center items-center  mt-40">
+  <div style="display: flex; justify-content: center; align-items: center;" className="poppins-regular">
     <h1 class="poppins-regular" style="font-size: 77px;">Turn Your</h1> 
     <img src="assets/webstuff/nlogo.png" style="width: 291px; height: 173px" alt="Logo" />
  </div>
@@ -40,7 +40,7 @@
  </div>
 
 
-  <section id="about" style="margin-top: 60vh; position:relative; display: flex; flex-direction: column; align-items: center;">
+  <section id="about" style="margin-top: 70vh; position:relative; display: flex; flex-direction: column; align-items: center;">
     <div style=" z-index:999; display: flex; flex-direction: column; align-items: center;">
       <h2 id="dreambig" >Dream Big.</h2>
       <p  id="dbt" d>Ever wanted to qualify to compete in the International Biology Olympiad, which sets you up for a path of success as a future doctor? Or to win at the International Science and Engineering Fair which brings you one step closer to becoming a future scientist or innovator? You need resources and mentorship to help you reach your dreams. Regardless, cast your wide net far beyond the horizon — because we got you covered. </p>
