--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
   </header>
 
 <div class="containter2">
-  <div style="display: flex; justify-content: center; align-items: center;" className="poppins-regular">
-    <h1 class="poppins-regular" style="font-size: 77px;">Turn Your</h1> 
+  <div style="display: flex; justify-content: center; align-items: center; margin-top: 50px;" className="poppins-regular">
+    <h6 class="poppins-regular" style="font-size: 77px; font-weight: 600;">Turn Your</h6> 
     <img src="assets/webstuff/nlogo.png" style="width: 291px; height: 173px" alt="Logo" />
  </div>
  <h2 style="text-align: center; font-size: 77px; margin-top: -60px;"class="poppins-regular text-center text-[77px] mt-[-60px]">Dream Into Reality</h2>
